WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273739
TestWebKitAPI.WKScrollViewTests.AsynchronousWheelEventHandling fails on iOS Simulator
https://bugs.webkit.org/show_bug.cgi?id=273739
Summary
TestWebKitAPI.WKScrollViewTests.AsynchronousWheelEventHandling fails on iOS S...
David Kilzer (:ddkilzer)
Reported
2024-05-04 11:03:15 PDT
TestWebKitAPI.WKScrollViewTests.AsynchronousWheelEventHandling are a constant failure on iOS Simulator. Fails on both iPhone and iPad Simulators. Results: <
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKScrollViewTests.AsynchronousWheelEventHandling
> See: API-Tests-iOS-Simulator-EWS <
https://ews-build.webkit.org/#/builders/13
>
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2024-05-04 11:03:39 PDT
Failures started when upgrading bots to iOS 17.4.
Radar WebKit Bug Importer
Comment 2
2024-05-04 11:05:58 PDT
<
rdar://problem/127547694
>
Wenson Hsieh
Comment 3
2024-05-06 10:58:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28183
EWS
Comment 4
2024-05-06 14:22:09 PDT
Committed
278426@main
(5d8844437fae): <
https://commits.webkit.org/278426@main
> Reviewed commits have been landed. Closing PR #28183 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug