TestWebKitAPI.WKScrollViewTests.AsynchronousWheelEventHandling fails on iOS Simulator https://bugs.webkit.org/show_bug.cgi?id=273739 rdar://127547694

Reviewed by Abrar Rahman Protyasha and Aditya Keerthi.

The initializer `-[BEScrollViewScrollUpdate initWithScrollEvent:phase:]` is marked `NS_DIRECT` in
BrowserEngineKit, so attempts to initialize a scroll update for testing fail due to invoking an
unrecognized selector (in 273582@main, I'd previously been testing against a local debug build of
BrowserEngineKit that did not inline this initializer, so the test was passing as expected).

Fix this by adjusting the testing strategy, so that we instead initialize a mock Objective-C object
(`WKTestScrollViewScrollUpdate`) which implements identical functionality.

* Tools/TestWebKitAPI/Tests/ios/WKScrollViewTests.mm:
(-[WKTestScrollViewScrollUpdate initWithScrollEvent:phase:]):
(-[WKTestScrollViewScrollUpdate phase]):
(-[WKTestScrollViewScrollUpdate timestamp]):
(-[WKTestScrollViewScrollUpdate locationInView:]):
(-[WKTestScrollViewScrollUpdate translationInView:]):
(createScrollUpdate):
(TEST(WKScrollViewTests, AsynchronousWheelEventHandling)):

Canonical link: https://commits.webkit.org/278426@main